更正图片url错误
将’https:/‘修复为'https://'

--- a/asset/blogs/机器学习与数据挖掘——第二章 数据与数据预处理.md
+++ b/asset/blogs/机器学习与数据挖掘——第二章 数据与数据预处理.md
@@ -12,7 +12,7 @@ tags:
 ## 什么是数据？
 数据是数据对象的**集合**及其**属性**
 
-![数据对象集合及其属性](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/2010bebf5d95d4fb200ca7cde61cc225/23fecb218a7fcaebc9df4237da2eca73.png)
+![数据对象集合及其属性](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/2010bebf5d95d4fb200ca7cde61cc225/23fecb218a7fcaebc9df4237da2eca73.png)
 ## 属性的类型
 - 标称标度 nominal scale
 标称属性的值是一些符号或实物的名称，每个值代表某种类别、编码或状态，所以标称属性又被看做是分类型的属性（categorical）。这些值不存在顺序关系，并且不是定量的。
