--- a/asset/blogs/王道408数据结构——第七章 查找.md
+++ b/asset/blogs/王道408数据结构——第七章 查找.md
@@ -47,7 +47,7 @@ int searchSeq(SSTable ST, ElemType key){
 ## 有序表的顺序查找
 若在查找前就知道表的关键字是有序的，则可以不用再比较到表的另一端就能确定查找失败，从而降低失败的ASL。
 可以用查找判定树来描述查找过程。树中圆形结点标识表中存在的元素；举行结点称为失败结点，描述的是不在表中的数据值的集合，若有n个结点，则相应有n+1个失败结点。
-![有序顺序表上的顺序查找判定树](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/f552c42121cd99be185059d96277d3fc/2837f38996baa7aca86d9960ae98b6e5.jpg)
+![有序顺序表上的顺序查找判定树](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/f552c42121cd99be185059d96277d3fc/2837f38996baa7aca86d9960ae98b6e5.jpg)
 查找成功的ASL和一般线性表相同。
 查找失败是，查找指针一定走到了某个失败结点。失败结点时虚构的，所以到达失败结点时的查找长度等于其父结点所在的层数。
 $$ASL_{(不成功)}=\sum_{j=1}^nq_j(l_j-1)=\frac{1+2+\cdots+n+n}{n+1}=\frac{n}{2}+\frac{n}{n+1}$$式中，$q_j$是到达第 j 个失败结点的概率，在相等查找概率的情形下，它为$1/(n+1)$；$l_j$是第 j 个失败结点所在层数。
@@ -74,7 +74,7 @@ int binnarySearch(SqList L, ElemType key){
 ```
 折半查找也可用判定树来描述。每个结点值均大于其左子结点，小于其右子结点。若有序序列有n个元素，则判定树中有n个非叶结点和n+1个叶节点。
 显然，二分查找的判定树是一棵**平衡二叉树**。
- ![描述折半查找过程的判定树](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/f552c42121cd99be185059d96277d3fc/1f418a7c876a5621cee71aef3c065596.jpg)
+ ![描述折半查找过程的判定树](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/f552c42121cd99be185059d96277d3fc/1f418a7c876a5621cee71aef3c065596.jpg)
 $$
 \begin{aligned}
 ASL_{(成功)}&=\frac{1}{n}\sum_{i=1}^nl_i\\
