--- a/asset/blogs/电子商务应用课程知识整理 第六章-数据挖掘.md
+++ b/asset/blogs/电子商务应用课程知识整理 第六章-数据挖掘.md
@@ -39,7 +39,7 @@ tags:
 算法基于的先验知识：**频繁项集的子集也一定是频繁的**。例如：如果{A，B}是频繁项集，则{A}和{B}也一定是频繁项集。
 
 对于k各项，从1到k，递归地查找频繁项集。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/704cc572a051085a93bc4c58728de44c/511e59584c2d2a4255a473e474bb3883.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/704cc572a051085a93bc4c58728de44c/511e59584c2d2a4255a473e474bb3883.png)
 # 三、分类与预测
 **分类**：用于预测离散的目标变量，预测类别未知的数据项的类别。
 **预测**：用于预测连续的目标变量，主要方法时回归。
@@ -59,7 +59,9 @@ tags:
 #### <font color='red'>k均值算法（k-means）
 是一种简便、使用的无监督聚类分析算法。在**已知簇的个数**时，可以很好地实现数据的聚类分析。
 
-首先，随机选择K个点作为聚类中心，计算其他样本与各个聚类中心的向量距离，将每个样本都划入与其距离最近的聚类中心对应的簇中。对每一个簇，计算其中所有样本的均值向量，产生K个新的聚类中心。如此反复，不断改变聚类中心的位置，直到聚类中心不再变化或达到迭代上限为止。![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/704cc572a051085a93bc4c58728de44c/23b28868aeaf2b3e45e8a949e06055af.png)
+首先，随机选择K个点作为聚类中心，计算其他样本与各个聚类中心的向量距离，将每个样本都划入与其距离最近的聚类中心对应的簇中。对每一个簇，计算其中所有样本的均值向量，产生K个新的聚类中心。如此反复，不断改变聚类中心的位置，直到聚类中心不再变化或达到迭代上限为止。
+
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/704cc572a051085a93bc4c58728de44c/23b28868aeaf2b3e45e8a949e06055af.png)
 
 # 五、异常分析
 又称为偏差分析或离群点分析。离群点指异常对象，属性是明显偏离期望或常见的属性值。
