--- a/asset/blogs/电子商务应用课程知识整理 第四章-搜索引擎.md
+++ b/asset/blogs/电子商务应用课程知识整理 第四章-搜索引擎.md
@@ -30,7 +30,7 @@ tags:
 
 特点是所需的硬件成本低、用户有需求特定、查询方式多样。
 ## <font color='red'>工作原理
-![](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/8235469792609a95a89460dddafb0b6d.jpg)
+![](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/8235469792609a95a89460dddafb0b6d.jpg)
 ### 1.抓取网页
 网页抓取程序顺着网页中的链接，连续地抓取网页，被抓取的网页被称之为**网页快照**。
 ### 2.处理网页
@@ -121,7 +121,7 @@ tags:
 - 出链越少的网页越重要。
 
 
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/88e92c4cb237ae6f440a194f2c1db12a.png)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/1d4e50abf813f242a9d88e53a1d9375a.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/88e92c4cb237ae6f440a194f2c1db12a.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/1d4e50abf813f242a9d88e53a1d9375a.png)
 转移矩阵每一列代表一个节点，该节点所有出链平分权值。如，A对B、D均有链接，则矩阵第一列为[0, 0.5, 0, 0.5]
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/e422aef1a49609ab007234f726087f0d.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/c96ef9b94f911bfc26d121dce6b004f4/e422aef1a49609ab007234f726087f0d.png)
