--- a/asset/blogs/软件体系结构知识点整理.md
+++ b/asset/blogs/软件体系结构知识点整理.md
@@ -10,13 +10,13 @@ tags:
 
 包括软件体系结构风格、uml、软件质量属性、面向对象设计原则以及设计模式
 [pdf及goodnote版本](https://download.csdn.net/download/weixin_45668903/16649227?spm=1001.2014.3001.5501)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/3d4b3babcd0f5333f4ae11425fc18495.jpg)![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/093894a267af75d11f6aaaa627b1b782.jpg)![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/bcf22f105df9fb7bcb05eecfa032d242.jpg)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/9b86d7477f10a581d9297b75b392f34d.jpg)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/59249886045ebbc93d26c27c1d958248.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/3d4b3babcd0f5333f4ae11425fc18495.jpg)![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/093894a267af75d11f6aaaa627b1b782.jpg)![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/bcf22f105df9fb7bcb05eecfa032d242.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/9b86d7477f10a581d9297b75b392f34d.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/59249886045ebbc93d26c27c1d958248.jpg)
 
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/311bda622d0454277db0bcbb763035c7.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/311bda622d0454277db0bcbb763035c7.jpg)
 
 
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/546b633786b1de32bf4354640824d43b.jpg)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/b056d404489d9c30bce841a0026d609a.jpg)![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/07b1a4ae21c4a3a073ae26a25c5c98dd.jpg)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/d4f608a9310484c583f34404b86f8c1f.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/546b633786b1de32bf4354640824d43b.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/b056d404489d9c30bce841a0026d609a.jpg)![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/07b1a4ae21c4a3a073ae26a25c5c98dd.jpg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/e879f3b12191b596993886eefc10c94b/d4f608a9310484c583f34404b86f8c1f.jpg)
