--- a/asset/blogs/软件配置管理（六）常用配置软件配置工具指令.md
+++ b/asset/blogs/软件配置管理（六）常用配置软件配置工具指令.md
@@ -80,4 +80,4 @@ tags:
 | git push     | 上传本地指定分支到远程仓库                                   |
 | git stash    | 暂时将未提交的变化移除，稍后再移入                           |
 
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/f464f31d4a618e6e3d5b9b16e60107ac/b9074ee972fc81ffb1eeaddb05a0002e.jpeg)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/f464f31d4a618e6e3d5b9b16e60107ac/b9074ee972fc81ffb1eeaddb05a0002e.jpeg)
