--- a/asset/blogs/软件项目组织管理（一）项目管理概述.md
+++ b/asset/blogs/软件项目组织管理（一）项目管理概述.md
@@ -100,7 +100,7 @@ tags:
 # 项目管理发展阶段
 - 传统项目管理：着重在项目实施环节，站在实施方的立场上，分析如何才能更好地完成项目。
 - 现代项目管理：注重人的因素，注重顾客，注重柔性管理。追求的是使项目参与方都得到最大的满意及项目目标的综合最优化。基本理念是多赢。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7beb4de531bc10a8f8136637596228f0/b74701d3b59de84d6eee860950e3968f.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7beb4de531bc10a8f8136637596228f0/b74701d3b59de84d6eee860950e3968f.png)
 
 # 项目管理知识体系
 ## 九大知识领域
