--- a/asset/blogs/软件项目组织管理（七）项目成本管理.md
+++ b/asset/blogs/软件项目组织管理（七）项目成本管理.md
@@ -55,10 +55,10 @@ tags:
 # 成本管理的工具方法
 ## 净现值
 是项目所产生的现金净流量，以资金成本为贴现率折现后与原始投资额现值的差额。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/d7bec9df8122007a2ba9aa46d1016f67.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/d7bec9df8122007a2ba9aa46d1016f67.png)
 
 ## 投资回报率
- 是项目的收益减去成本后，再除以成本的结果。![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/b2e24085d4310590fd16f6d0f6aed5dd.png)
+ 是项目的收益减去成本后，再除以成本的结果。![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/b2e24085d4310590fd16f6d0f6aed5dd.png)
 ## 挣值分析法
 通过测量和计算**已完成工作的预算费用**、**实际费用**以及**计划工作的预算费用**得到计划实施的进度和费用的偏差，达到判断项目预算和进度计划执行情况。
 - PV/BCWS：计划值——截至目前，计划完成工作的预算费用
@@ -79,5 +79,5 @@ CPI小于1表示超支
 SPI大于1表示进度提前
 - EAC：完工估算——EAC=BAC/CPI
 - EDC：完工时间估算——EDC=OD/SPI
-OD是项目开始时估计的完工时间![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/b1c404715d7ca4b9dbcea11c52a9b784.png)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/109706159ce9e4cc8ce5146294389569.png)
+OD是项目开始时估计的完工时间![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/b1c404715d7ca4b9dbcea11c52a9b784.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/19bfa49f91990da256599f1e293d0dea/109706159ce9e4cc8ce5146294389569.png)
