--- a/asset/blogs/软件项目组织管理（九）项目人力资源管理.md
+++ b/asset/blogs/软件项目组织管理（九）项目人力资源管理.md
@@ -24,11 +24,11 @@ tags:
 - 习惯
 ## 马斯洛的需求层次理论
 人类的行为是由一系列的需求引起或驱动的。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7ceb73130963f7b9eb6704045c8fadfa/792bc8d5bcde6ca3aba11af21ece394b.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7ceb73130963f7b9eb6704045c8fadfa/792bc8d5bcde6ca3aba11af21ece394b.png)
 ## 赫兹伯格的双因素理论
 在考虑工作激励时区别了激励因素（影响工作满意）和保健因素（导致不满的）。
 他发现人们工作的主要激励因素来自于个人成绩以及由此获得的认可度。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7ceb73130963f7b9eb6704045c8fadfa/f9c0009eaa9cc60252e44ecc3fbe923d.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7ceb73130963f7b9eb6704045c8fadfa/f9c0009eaa9cc60252e44ecc3fbe923d.png)
 ## 权力理论
 权力是一种影响行为的潜在能力。
 - 强制权力
