--- a/asset/blogs/软件项目组织管理（二、三）项目管理与信息技术环境、项目管理过程组.md
+++ b/asset/blogs/软件项目组织管理（二、三）项目管理与信息技术环境、项目管理过程组.md
@@ -33,11 +33,11 @@ tags:
   - 弱矩阵
   - 平衡矩阵
   - 强矩阵
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/c951a201a9a4ef30306ab1dc2b937a6e.png)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/13c685b99da6dd74fcc097263185cd83.png)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/929a0185734c1b71f39df7274e481897.png)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/ce5b9a7876fac905b8bba93eda0a422d.png)
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/47e6b644efb50fe199eec6387d802428.png)![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/fbc5e7f8987a2119d53b852cd0b54aff.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/c951a201a9a4ef30306ab1dc2b937a6e.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/13c685b99da6dd74fcc097263185cd83.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/929a0185734c1b71f39df7274e481897.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/ce5b9a7876fac905b8bba93eda0a422d.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/47e6b644efb50fe199eec6387d802428.png)![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/fbc5e7f8987a2119d53b852cd0b54aff.png)
 # 项目生命周期
 是项目阶段的集合。
 - 概念：为什么要做？做什么？
@@ -70,4 +70,4 @@ tags:
 
 实施过程占用最多时间，计划过程次之，启动和收尾占用最少时间。
 计划和监控过程组贯穿所有9个知识领域。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/534770de49acb8aabee2606fa3f8d76b.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/a4fac9edc1c55b5e8ac808ed729cbf15/534770de49acb8aabee2606fa3f8d76b.png)
