--- a/asset/blogs/软件项目组织管理（八）项目质量管理.md
+++ b/asset/blogs/软件项目组织管理（八）项目质量管理.md
@@ -70,17 +70,17 @@ PDCA循环全过程分为是个依序衔接的阶段
 # 质量控制的工具和方法
 ## 排列图（帕累托分析）
 根据优先次序表达信息，用于找到造成故障的主要原因。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/b26c1ca312ebc5e4e89c9437f494b960.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/b26c1ca312ebc5e4e89c9437f494b960.png)
 
 
 ## 控制图
 用于确认项目过程和结果是否处于受控状态。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/b64880ae4f178c0cd9905fd12a92e2d0.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/b64880ae4f178c0cd9905fd12a92e2d0.png)
 ## 因果图（鱼刺图）
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/bcec395d675433a9914b7008a096a9a9.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/bcec395d675433a9914b7008a096a9a9.png)
 可揭示造成问题的多种原因和结果之间的关系
 ## 关联图
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/50dc89c5907e86c3ee94577bf150973b.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7e8e2ed90e1c4d2193fa9a1ed729996e/50dc89c5907e86c3ee94577bf150973b.png)
 分析复杂因素交织的问题，用于原因——结果分析，可抓住关键问题。
 ## 散点图
 可显示两个变量之间是否有关系
