--- a/asset/blogs/软件测试技术（一）软件测试概述.md
+++ b/asset/blogs/软件测试技术（一）软件测试概述.md
@@ -90,7 +90,7 @@ bug类型包括：
 与软件开发瀑布模型相对应
 
 局限性：软件测试作为设计和编码后的一个阶段，忽视了测试对需求分析、系统设计的验证。不能体现尽早测试的原则。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/3f76666c3d88f45377186446042c6451.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/3f76666c3d88f45377186446042c6451.png)
 
 ## W模型
 增加了软件开发各阶段中**同步**进行的验证和确认活动。
@@ -103,7 +103,7 @@ bug类型包括：
 
 
 局限性：需求、设计、编码活动被视为串行的，同样，测试和开发也有前后关系。无法支持迭代的开发模型。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/aa1d561876ede808d69075cae5a7dccb.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/aa1d561876ede808d69075cae5a7dccb.png)
 
 ## H模型
 H模型将测试活动**完全独立**出来，形成了一个完全独立的流程，贯穿于产品的整个生命周期。将测试准备活动和测试执行活动清晰的体现了出来。
@@ -118,10 +118,10 @@ H模型将测试活动**完全独立**出来，形成了一个完全独立的流
 1. 对管理要求高
 2. 对技术要求高：要求合理定义每次迭代的规模。
 3. 测试就绪点模糊：很多时候并不知道测试就绪点应该放在哪是合适的。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/ea2b9179d07389c41a77ea10ed0d9bb1.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/ea2b9179d07389c41a77ea10ed0d9bb1.png)
 
 ## X模型
 针对单独的程序片段进行相互分离的编码和测试，通过频繁的交接，最终集成为可执行的程序。
 
 X模型还定位了探索性测试，这是不进行事先计划的特殊类型的测试，这一方式往往能帮助有经验的测试人员在测试计划之外发现更多的软件错误。
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/e1d92499bc767170ce2df1d26d4fb63a.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/63dc9e516002577e1c79bab09d041a70/e1d92499bc767170ce2df1d26d4fb63a.png)
