--- a/asset/blogs/软件配置管理（二）配置管理角色与过程.md
+++ b/asset/blogs/软件配置管理（二）配置管理角色与过程.md
@@ -33,9 +33,9 @@ tags:
 1. 由CMO完成管理和维护工作。
 2. 有SIO和DEV具体执行软件配置管理策略。
 3. 变更流程。
-![连线题](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7624914ea952bb9c5a4141d0507475e8/05006e7fda574833b7127b029a37399b.png)
+![连线题](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7624914ea952bb9c5a4141d0507475e8/05006e7fda574833b7127b029a37399b.png)
 # <font color='red'>三、软件配置管理七项基本活动</font>
-![在这里插入图片描述](https:/raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7624914ea952bb9c5a4141d0507475e8/26755a3514fa1944b2321b6f84013ab0.png)
+![在这里插入图片描述](https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures/7624914ea952bb9c5a4141d0507475e8/26755a3514fa1944b2321b6f84013ab0.png)
 
 ## 1.制定配置管理计划
 ## 2.识别和标志配置项
