整理博客，添加目录信息

--- a/asset/blogs/美团240309春招实习笔试——小美的区间删除.md
+++ b/asset/blogs/美团240309春招实习笔试——小美的区间删除.md
@@ -55,7 +55,10 @@ $1 ≤ a_i ≤ 10^9$
 第四个方案，删除 [2]。
 
 # 解题
-末尾零的个数由所有乘数中的2因子和5因子决定，公式化来说 $$tailing\_zero\_num = min(\sum_0^n factor2(num[i]), \sum_0^n factor5(nums[i]))$$
+末尾零的个数由所有乘数中的2因子和5因子决定，公式化来说 
+$$
+tailing\_zero\_num = min(\sum_0^n factor2(num[i]), \sum_0^n factor5(nums[i]))
+$$
 设原数组所有2因子和5因子的和分别为`total2`和`total5`，被删除区间中2因子和5因子的和分别为`x2`和`x5`。
 根据题意，要使末尾零不少于k，等价于$min(total2-x2, total5-x5) >= k$
 即$total2-x2 >= k$ and $total5-x5 >= k$, 也即$x2 <= total2 - k$ and $x5 <= total5 - k$
